--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Weather App</title>
-    <link rel="stylesheet" href="project/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="weather-app">
